...
        view = typeView.customView
        setupActivityView()
    }
    
    // MARK: - Setups
    private func setupNavigation() {
        title = "Chuck Norris Facts"
        let addBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "magnifyingglass"), style: .done, target: self, action: #selector(showSearch(_:)))
        navigationItem.rightBarButtonItem = addBarButtonItem
        navigationController?.view.backgroundColor = .systemBackground
        navigationController?.navigationBar.prefersLargeTitles = true
    }
    
    func setupTableView(with facts: [Fact]) {
...
